--- a/frontend/src/components/nav/nav-bar.css
+++ b/frontend/src/components/nav/nav-bar.css
@@ -2,37 +2,64 @@ body, html{
     height: 100%;
 }
 
-#hamburger{
-    font-size:30px;
+li {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    
 }
 
-.close {
+#footer-container{
+    background-color: #537EC5;
+    width: 100%;
+    height: 70px;
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    box-shadow: #e0e0e0 2px 2px 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.navLink{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-decoration: none;
+}
+
+.navLink span{
+  font-family: sans-serif;
+  color: white;
+  text-decoration: none;
+  font-size: 10px;
+}
+
+.navLink img{ 
+    height: 36px;
+    margin-bottom: 3px;
+}
+
+#flashlight {
+    transform: rotate(-45deg);
+    height: 30px;
+    margin-bottom: 8px;
+}
+
+/* #hamburger{
+    font-size:30px;
+} */
+
+/* .close {
     width: 0;
 }
 
 .open {
     width: 250px;
-}
+} */
 
-li {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-#sidebar-container{
-    background-color: lightgray;
-    height: 100%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    transition: 0.1s;
-    box-shadow: #e0e0e0 2px 2px 0;
-}
-
-#sidebar-container .closebtn {
+/* #sidebar-container .closebtn {
   position: absolute;
   top: 0;
   right: 20px;
@@ -82,4 +109,4 @@ li {
     padding: 20px 0;
     font-family: 'Didact Gothic', sans-serif;
     font-size: 24px;
-}
+} */
