--- a/frontend/src/components/main/main_page.css
+++ b/frontend/src/components/main/main_page.css
@@ -89,6 +89,7 @@
     font-size: 14px;
     font-weight: 100;
     margin-right: 10px;
+    border: none;
 }
 
 #loginButton {
@@ -103,6 +104,7 @@
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     font-weight: 100;
+    border: none;
 }
 
 #joinButton{
